[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wttelegram-runtime"
version = "0.1.0"
description = "Telegram bot runtime for WTmelon admin-managed promo bots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.19,<4",
  "asyncpg>=0.30,<1",
  "bleach>=6.2,<7",
  "fastapi>=0.115,<1",
  "markdown>=3.8,<4",
  "pydantic-settings>=2.10,<3",
  "python-dotenv>=1.1,<2",
  "uvicorn[standard]>=0.35,<1"
]

[project.optional-dependencies]
dev = ["ruff>=0.12,<1"]

[project.scripts]
wttelegram-runtime = "wttelegram_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

